Fixed uploadbanner bugs from QA
* Remove buttons are misalligned
* Don't Upload wrong picture type. Errors are hard to read.
* Don't Upload wrong picture type- broken images throw error
* Display all errors. Only First
* error prevents new image display
https://rally1.rallydev.com/#/9459752931d/detail/defect/48216234355
https://rally1.rallydev.com/#/9459752931d/detail/defect/48225267100
https://rally1.rallydev.com/#/9459752931d/detail/defect/48225495373
https://rally1.rallydev.com/#/9459752931d/detail/defect/48225737451
https://rally1.rallydev.com/#/9459752931d/detail/defect/48226324071

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -548,3 +548,6 @@ footer {
   border-bottom: 55px solid transparent;
   border-left: 110px solid #F0e935;
   border-right: none; }
+
+.upload-banner input[type="file"] {
+  display: inline; }
